# Quake2SDK

./: README.md
baseq2/: config.cfg  maps.lst
baseq2/demos/: q2demo1.dm2
baseq2/maps/: demo2.bsp  demo3.bsp
baseq2/save/save0/: game.ssv  server.ssv
baseq2/sound/world/: lava1.pk
src/: CMakeLists.txt
src/client/: cl_input.c
src/game/: CMakeLists.txt  g_local.h  q_shared.c
src/qcommon/: qcommon.h
src/ref_gl/: CMakeLists.txt
src/tools/bsp/qbsp3/: CMakeLists.txt  gldraw.c
src/tools/bsp/qrad3/: CMakeLists.txt  trace.c
src/tools/bsp/qvis3/: CMakeLists.txt
src/tools/qe4/: CMakeLists.txt  eclass.c  qe3.h  textures.c  win_ent.c  win_main.c
src/win32/: cd_win.c  sys_win.c
tools/: QE4.ilk  qbsp3.ilk  qrad3.ilk  qvis3.ilk
tools/scripts/: quake.qe4
